# heart-disease-guidline-RAG

./: .dockerignore  .gitignore  README.md  overroll_design_v1.md  overroll_intro.md  pyproject.toml  tmp.txt
RAG-guidelines/心内科指南/: _冠状动脉综合征无创影像学专家共识解读.caj
app/: __init__.py  config.py
app/api/: __init__.py  main.py
app/eval/: __init__.py
app/ingestion/: __init__.py  chunking.py  index_bm25.py  index_vectors.py  parse_pdfs.py  scan_guidelines.py
app/llm/: __init__.py  answer_generator.py  openai_client.py  prompts.py
app/models/: __init__.py  chunk.py  document.py  qa.py  retrieval.py
app/retrieval/: __init__.py  bm25_store.py  embedder.py  evidence.py  hybrid_retriever.py  reranker.py  vector_store.py
app/utils/: tokenization.py
docker/: Dockerfile  docker-compose.yml
